complete both projects
resolve build issues of quizz buzz and complete job board app

--- a/job_board/.env
+++ b/job_board/.env
@@ -3,3 +3,9 @@
 
 NEXT_PUBLIC_SANITY_PROJECT_ID="kcotgrnx"
 NEXT_PUBLIC_SANITY_DATASET="production"
+
+AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='https://dev-2gnvo0vbqanq2p4i.us.auth0.com'
+AUTH0_CLIENT_ID='gmBHULQU2lEEo4Z7j65qDomwYCpXHZzC'
+AUTH0_CLIENT_SECRET='dbQS_OrDrqTIeaoM5WfoEnyXkERe6zA19I8qdHH6CJ4KqhVEM1ZnmZ19J8fkLFdG'
