--- a/job_board/package.json
+++ b/job_board/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.37.1",
@@ -16,8 +17,10 @@
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.0",
     "sanity": "^3.37.1",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
